# otomoto-webscrapper

./: README.md  main.py  otomoto_scrapper.py  pyproject.toml  test.py  test.sh
src/otomoto_scrapper/: bidfax_scrapper.py  models.py  otomoto_scrapper.py  processor.py  scrapper.py
