[tool.poetry]
name = "amazon-interview"
version = "0.1.0"
description = ""
authors = ["Piotr Popis <piotrpopis98@icloud.com>"]
readme = "README.md"
packages = [{include = "amazon_interview"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
