[tool.poetry]
name = "otomoto-webscrapper"
version = "0.1.0"
description = ""
authors = ["Piotr Popis <piotrpopis98@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.11.2"
lxml = "^4.9.3"
undetected-chromedriver = "^3.5.2"
selenium-stealth = "^1.0.6"
webdriver-manager = "^4.0.0"
pytrends = "^4.9.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
